--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@
 
     /* Features */
     .features {
-        padding: 60px 40px;
+        padding: 50px 40px;
         text-align: center;
     }
 
@@ -195,7 +195,7 @@
 
     /* Screenshots */
     .screenshots {
-        padding: 60px 30px;
+        padding: 50px 30px;
         background: #f1f3f5;
         text-align: center;
     }
@@ -306,7 +306,7 @@
 
     /* Download section */
     .download {
-        padding: 60px 20px;
+        padding: 80px 20px;
         background: #f1f3f5;
     }
 
@@ -334,6 +334,7 @@
         display: flex;
         /* justify-content: space-between; */
         justify-content: center;
+        flex-wrap: wrap;
     }
 
     .store-card {
